--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Link check (Markdown + HTML)
+      # Link check (README + index.html)
       - name: Link check
         uses: lycheeverse/lychee-action@v1
         with:
@@ -17,11 +17,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Lighthouse CI against static dist (this repo)
+      # Lighthouse CI via config file (no staticDistDir input)
       - name: Lighthouse CI
         uses: treosh/lighthouse-ci-action@v10
         with:
-          staticDistDir: .
+          configPath: ./.lighthouserc.json
           runs: 1
           uploadArtifacts: true
           temporaryPublicStorage: true
