--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,13 +3,16 @@ on:
   push:
   pull_request:
 
+permissions:
+  contents: read
+  actions: write
+
 jobs:
   check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      # Link check (README + index.html)
       - name: Link check
         uses: lycheeverse/lychee-action@v1
         with:
@@ -17,11 +20,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Lighthouse CI via config file (no staticDistDir input)
       - name: Lighthouse CI
         uses: treosh/lighthouse-ci-action@v10
         with:
           configPath: ./.lighthouserc.json
           runs: 1
           uploadArtifacts: true
+          artifactName: lhci-${{ github.run_number }}
           temporaryPublicStorage: true
